# mud-mcp

./: .gitignore  README.md  package.json
ingest/: README.md  overlay.yml  pyproject.toml
ingest/catalog/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
ingest/catalog/extract/: base.py  controllers.py  crawlers.py  entities.py  migrations.py  repositories.py  services.py
ingest/catalog/load/: client.py  edges.py  nodes.py  schema.py
ingest/catalog/transform/: overlay.py  resolve.py
src/: config.ts  index.ts
src/lib/: logger.ts  neo4j.ts  safe-path.ts
src/resources/: index.ts
src/tools/: catalog-status.ts  index.ts  list-controllers.ts  list-crawlers.ts  list-entities.ts  read-file.ts  search-code.ts
